Fix alignment

--- a/docs/xtra/stylesheets/ajustements.css
+++ b/docs/xtra/stylesheets/ajustements.css
@@ -85,7 +85,7 @@ blockquote {
   max-width: 600px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
   border-radius: 12px;
-  margin: auto!important;
+  /* margin: auto!important; */
   margin-top: -2em!important;
   margin-bottom: -2em!important;
 }
